--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
     </dependencies>
 
     <modules>
-        <module>module-simple</module>
+        <module>module-ksimple</module>
         <module>webapp</module>
     </modules>
 
