--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,16 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+		
+		<dependency>
+			<groupId>org.apache.uima</groupId>
+			<artifactId>uimaj-core</artifactId>
+			<version>3.1.1</version>
+		</dependency>
     </dependencies>
 
     <modules>
-        <module>module-ksimple</module>
+        <module>module-simple</module>
         <module>webapp</module>
     </modules>
 
