--- a/domox-domain/pom.xml
+++ b/domox-domain/pom.xml
@@ -58,6 +58,7 @@
         <dependency>
             <groupId>org.apache.isis.persistence</groupId>
             <artifactId>isis-persistence-jdo-datanucleus5</artifactId>
+            <version>2.0.0-M4</version>
         </dependency>
 
         <dependency>
