--- a/domox-webapp/pom.xml
+++ b/domox-webapp/pom.xml
@@ -22,7 +22,8 @@
     <properties>
         <maven-cucumber-reporting.version>4.11.2</maven-cucumber-reporting.version>
         <archunit.version>0.12.0</archunit.version>
-        <skipBDD>${skipTests}</skipBDD>
+        <!--skipBDD>${skipTests}</skipBDD-->
+        <skipBDD>true</skipBDD>
     </properties>
 
     <build>
@@ -65,7 +66,7 @@
                         <id>cucumber-cli</id>
                         <phase>integration-test</phase>
                         <goals>
-                            <goal>run</goal>
+                            <!--goal>run</goal-->
                         </goals>
                         <configuration>
                             <target>
