--- a/domox-domain/pom.xml
+++ b/domox-domain/pom.xml
@@ -4,6 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <project.version>0.1.0-SNAPSHOT</project.version>
+    </properties>
+
     <parent>
         <groupId>org.apache.isis.domox</groupId>
         <artifactId>domox</artifactId>
@@ -56,9 +60,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.isis.persistence</groupId>
-            <artifactId>isis-persistence-jdo-datanucleus5</artifactId>
-            <version>2.0.0-M4</version>
+            <groupId>org.apache.isis.mavendeps</groupId>
+            <artifactId>isis-mavendeps-jpa</artifactId>
+            <type>pom</type>
         </dependency>
 
         <dependency>
@@ -72,6 +76,12 @@
             <artifactId>isis-mavendeps-unittests</artifactId>
             <type>pom</type>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jmock</groupId>
+                    <artifactId>jmock-junit4</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -126,6 +136,11 @@
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.25.0-GA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.18</version>
         </dependency>
 
     </dependencies>
