--- a/domox-webapp/pom.xml
+++ b/domox-webapp/pom.xml
@@ -20,6 +20,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <project.version>0.1.0-SNAPSHOT</project.version>
         <maven-cucumber-reporting.version>4.11.2</maven-cucumber-reporting.version>
         <archunit.version>0.12.0</archunit.version>
         <!--skipBDD>${skipTests}</skipBDD-->
@@ -110,6 +111,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>domox-domain</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- isis -->
