--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- .20210301-0425-00d59d7f-->
     <properties>
-        <isis.version>2.0.0-M4</isis.version>
+        <project.version>0.1.0-SNAPSHOT</project.version>
+        <isis-version>2.0.0-M4.20210311-0425-ac6dc428</isis-version>
     </properties>
 
     <parent>
         <groupId>org.apache.isis.app</groupId>
         <artifactId>isis-app-starter-parent</artifactId>
-        <version>2.0.0-M4</version>
+        <version>2.0.0-M4.20210311-0425-ac6dc428</version>
         <relativePath/>
     </parent>
 
@@ -30,7 +30,6 @@
             <dependency>
                 <groupId>org.apache.isis.domox</groupId>
                 <artifactId>domox-domain</artifactId>
-                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.isis.domox</groupId>
