--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,9 @@ hs_err_pid*
 
 # IDE files
 /.idea/
-/**/*.iml
 
 # build artefacts
 /domox-domain/target/
 /domox-webapp/target/
 /domox-service/target/
+/domox-service/domox-service.iml
