Migrate to Apache isis 2.0.0-M6 + introduction of confluence-publisher

--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,27 @@
 
     <properties>
         <project.version>0.1.0-SNAPSHOT</project.version>
-        <isis-version>2.0.0-M4.20210322-0430-f1c8cf76</isis-version>
+        <isis-version>2.0.0-M6</isis-version>
         <stanford-corenlp.version>4.0.0</stanford-corenlp.version>
         <lombok.version>1.18.20</lombok.version>
+        <file.encoding>UTF-8</file.encoding>
+        <!--
+        https://wiki.int.kn/rest/api/space/SeaAirLog ->
+        {"id":118915073,"key":"SeaAirLog","name":"GSC > Sea/AirLog","type":"global","_links":{"webui":"/display/SeaAirLog","collection":"/rest/api/space","base":"https://wiki.int.kn","context":"","self":"https://wiki.int.kn/rest/api/space/SeaAirLog"},"_expandable":{"metadata":"","icon":"","description":"","homepage":"/rest/api/content/118587520"}}
+        How to get Confluence page ID -> https://confluence.atlassian.com/confkb/how-to-get-confluence-page-id-648380445.html
+        https://wiki.int.kn/rest/api/content/591236456
+        -->
+        <rootConfluenceUrl>https://wiki.int.kn</rootConfluenceUrl>
+        <spaceKey>SeaAirLog</spaceKey>
+        <ancestorId>591236456</ancestorId>
+        <username>joerg.rade</username>
+        <password>mar1760.</password>
     </properties>
 
     <parent>
         <groupId>org.apache.isis.app</groupId>
         <artifactId>isis-app-starter-parent</artifactId>
-        <version>2.0.0-M4.20210322-0430-f1c8cf76</version>
+        <version>2.0.0-M6</version>
         <relativePath/>
     </parent>
 
@@ -25,6 +37,25 @@
 
     <packaging>pom</packaging>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sahli.asciidoc.confluence.publisher</groupId>
+                <artifactId>asciidoc-confluence-publisher-maven-plugin</artifactId>
+                <configuration>
+                    <asciidocRootFolder>docs</asciidocRootFolder>
+                    <rootConfluenceUrl>https://wiki.int.kn</rootConfluenceUrl>
+                    <spaceKey>SeaAirLog</spaceKey>
+                    <ancestorId>591236456</ancestorId>
+                    <username>joerg.rade</username>
+                    <password>mar1760.</password>
+                    <attributes>
+                        <confluencePublisherVersion>${project.version}</confluencePublisherVersion>
+                    </attributes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencyManagement>
         <dependencies>
 
