--- a/domox-domain/pom.xml
+++ b/domox-domain/pom.xml
@@ -69,6 +69,7 @@
             <groupId>org.apache.isis.mavendeps</groupId>
             <artifactId>isis-mavendeps-jpa</artifactId>
             <type>pom</type>
+            <version>2.0.0-M6</version>
         </dependency>
 
         <dependency>
@@ -89,6 +90,13 @@
             <artifactId>isis-mavendeps-integtests</artifactId>
             <type>pom</type>
             <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>2.5.4</version>
         </dependency>
 
         <!-- IDE support (optional) -->
@@ -133,6 +141,24 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.18</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-batik</artifactId> <!-- svg -->
+            <version>3.6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-batik</artifactId> <!-- svg -->
+            <version>3.6.4</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-transcoder</artifactId>
+            <version>1.14</version>
         </dependency>
 
     </dependencies>
