--- a/domox-service/pom.xml
+++ b/domox-service/pom.xml
@@ -64,6 +64,17 @@
             <artifactId>fuel</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.kittinunf.fuel</groupId>
+            <artifactId>fuel-json</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
