--- a/domox-webapp/pom.xml
+++ b/domox-webapp/pom.xml
@@ -121,11 +121,11 @@
             <type>pom</type>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>org.apache.isis.mavendeps</groupId>
             <artifactId>isis-mavendeps-jdk11</artifactId>
             <type>pom</type>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -142,6 +142,11 @@
             <artifactId>isis-extensions-flyway-impl</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.isis.extensions</groupId>
+            <artifactId>isis-extensions-cors-impl</artifactId>
+        </dependency>
+
         <!-- TESTING -->
         <dependency>
             <groupId>org.apache.isis.mavendeps</groupId>
@@ -150,12 +155,12 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>org.apache.isis.mavendeps</groupId>
             <artifactId>isis-mavendeps-integspecs</artifactId>
             <type>pom</type>
             <scope>test</scope>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>com.tngtech.archunit</groupId>
