--- a/domox-webapp/pom.xml
+++ b/domox-webapp/pom.xml
@@ -22,7 +22,7 @@
     <properties>
         <project.version>0.1.0-SNAPSHOT</project.version>
         <maven-cucumber-reporting.version>4.11.2</maven-cucumber-reporting.version>
-        <archunit.version>0.12.0</archunit.version>
+        <archunit.version>0.20.1</archunit.version>
         <!--skipBDD>${skipTests}</skipBDD-->
         <skipBDD>true</skipBDD>
     </properties>
@@ -95,57 +95,59 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
                 </configuration>
-            </plugin-->
+            </plugin>
         </plugins>
     </build>
 
     <dependencies>
-
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>domox-domain</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- isis -->
         <dependency>
             <groupId>org.apache.isis.mavendeps</groupId>
             <artifactId>isis-mavendeps-webapp</artifactId>
+            <version>${isis-version}</version>
             <type>pom</type>
         </dependency>
-
-        <!--dependency>
-            <groupId>org.apache.isis.mavendeps</groupId>
-            <artifactId>isis-mavendeps-jdk11</artifactId>
-            <type>pom</type>
-        </dependency-->
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-actuator-autoconfigure</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.apache.isis.testing</groupId>
             <artifactId>isis-testing-h2console-ui</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.apache.isis.extensions</groupId>
             <artifactId>isis-extensions-flyway-impl</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.apache.isis.extensions</groupId>
             <artifactId>isis-extensions-cors-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.isis.security</groupId>
+            <artifactId>isis-security-shiro</artifactId>
+        </dependency>
+
+        <!-- Spring -->
+        <!--dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator-autoconfigure</artifactId>
+        </dependency-->
 
         <!-- TESTING -->
         <dependency>
@@ -154,14 +156,6 @@
             <type>pom</type>
             <scope>test</scope>
         </dependency>
-
-        <!--dependency>
-            <groupId>org.apache.isis.mavendeps</groupId>
-            <artifactId>isis-mavendeps-integspecs</artifactId>
-            <type>pom</type>
-            <scope>test</scope>
-        </dependency-->
-
         <dependency>
             <groupId>com.tngtech.archunit</groupId>
             <artifactId>archunit-junit5-api</artifactId>
@@ -173,6 +167,72 @@
             <artifactId>archunit-junit5-engine</artifactId>
             <version>${archunit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.isis.extensions</groupId>
+            <artifactId>isis-extensions-command-replay-primary</artifactId>
+            <version>${isis-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.isis.extensions</groupId>
+            <artifactId>isis-extensions-command-replay-secondary</artifactId>
+            <version>${isis-version}</version>
+        </dependency>
+        <!--dependency>
+            <groupId>org.apache.isis.extensions</groupId>
+            <artifactId>isis-extensions-exceldownload-ui</artifactId>
+            <version>${isis-version}</version>
+        </dependency-->
+        <dependency>
+            <groupId>org.apache.isis.core</groupId>
+            <artifactId>isis-core-interaction</artifactId>
+            <version>${isis-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.isis.core</groupId>
+            <artifactId>isis-core-security</artifactId>
+            <version>${isis-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.isis.valuetypes</groupId>
+            <artifactId>isis-valuetypes-asciidoc-metamodel</artifactId>
+            <version>${isis-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.isis.valuetypes</groupId>
+            <artifactId>isis-valuetypes-sse-ui-wkt</artifactId>
+            <version>${isis-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.isis.valuetypes</groupId>
+            <artifactId>isis-valuetypes-asciidoc-ui-wkt</artifactId>
+            <version>${isis-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.isis.extensions</groupId>
+            <artifactId>isis-extensions-pdfjs-ui</artifactId>
+            <version>${isis-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.isis.valuetypes</groupId>
+            <artifactId>isis-valuetypes-markdown-ui-wkt</artifactId>
+            <version>${isis-version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.isis.valuetypes</groupId>
+            <artifactId>isis-valuetypes-asciidoc-persistence-jpa</artifactId>
+            <version>${isis-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.isis.valuetypes</groupId>
+            <artifactId>isis-valuetypes-markdown-persistence-jpa</artifactId>
+            <version>${isis-version}</version>
         </dependency>
 
     </dependencies>
