--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   corenlp:
-    image: corenlp:4.2.0
+    image: nlpbox/corenlp
     ports:
       - "9000:9000"
     environment:
