--- a/domox-domain/pom.xml
+++ b/domox-domain/pom.xml
@@ -87,14 +87,14 @@
             <groupId>org.apache.isis.testing</groupId>
             <artifactId>isis-testing-fixtures-applib</artifactId>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>org.apache.isis.extensions</groupId>
             <artifactId>isis-extensions-secman-integration</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.isis.extensions</groupId>
-            <artifactId>isis-extensions-secman-applib</artifactId> <!-- new -->
-        </dependency>
+            <artifactId>isis-extensions-secman-applib</artifactId>
+        </dependency-->
         <dependency>
             <groupId>org.apache.isis.extensions</groupId>
             <artifactId>isis-extensions-secman-persistence-jpa</artifactId>
