--- a/domox-service/pom.xml
+++ b/domox-service/pom.xml
@@ -7,7 +7,7 @@
 
     <properties>
         <project.version>0.1.0-SNAPSHOT</project.version>
-        <kotlin.version>1.4.32</kotlin.version>
+        <kotlin.version>1.6.0</kotlin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -103,6 +103,17 @@
                     <groupId>org.json</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>2.1.0</version>
+            <type>pom</type>
         </dependency>
 
     </dependencies>
