--- a/domox-webapp/src/main/resources/application.yml
+++ b/domox-webapp/src/main/resources/application.yml
@@ -42,7 +42,7 @@ isis:
     wicket:
       application:
         about: Simple App
-        brand-logo-header: images/domox_logo.svg
+        brand-logo-header: images/domox_logo_48.svg
         css: css/application.css
         favicon-url: images/favicon.png
         js: scripts/application.js
