switched from M6 to M9/Causeway

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,16 +1,21 @@
 version: "3"
 services:
-  corenlp:
-    image: nlpbox/corenlp
-    ports:
-      - "9000:9000"
-    environment:
-      - JVM_OPTS=-Xmx4g
+#  corenlp:
+#    image: nlpbox/corenlp
+#    ports:
+#      - "9000:9000"
+#    environment:
+#      - JVM_OPTS=-Xmx4g
 
   kroki:
     image: yuzutech/kroki
     ports:
       - "8000:8000"
+
+#  sparknlp:
+#    image: johnsnowlabs/nlp-server
+#    ports:
+#      - "5000:5000"
 
 #  postgres:
 #    image: postgres
