--- a/domox-domain/src/main/resources/shiro.ini
+++ b/domox-domain/src/main/resources/shiro.ini
@@ -19,8 +19,8 @@
 
 [main]
 
-authenticationStrategy=org.apache.isis.extensions.secman.shiro.AuthenticationStrategyForIsisModuleSecurityRealm
-isisModuleSecurityRealm=org.apache.isis.extensions.secman.shiro.IsisModuleExtSecmanShiroRealm
+authenticationStrategy=org.apache.causeway.extensions.secman.shiro.AuthenticationStrategyForCausewayModuleSecurityRealm
+CausewayModuleSecurityRealm=org.apache.causeway.extensions.secman.shiro.CausewayModuleExtSecmanShiroRealm
 
 securityManager.authenticator.authenticationStrategy = $authenticationStrategy
 securityManager.realms = $isisModuleSecurityRealm
