--- a/domox-service/pom.xml
+++ b/domox-service/pom.xml
@@ -12,7 +12,7 @@
     </properties>
 
     <parent>
-        <groupId>org.apache.isis.domox</groupId>
+        <groupId>org.apache.causeway.domox</groupId>
         <artifactId>domox</artifactId>
         <version>0.1.0-SNAPSHOT</version>
     </parent>
@@ -23,8 +23,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.isis.testing</groupId>
-            <artifactId>isis-testing-fixtures-applib</artifactId>
+            <groupId>org.apache.causeway.testing</groupId>
+            <artifactId>causeway-testing-fixtures-applib</artifactId>
         </dependency>
 
         <dependency>
