--- a/pom.xml
+++ b/pom.xml
@@ -5,20 +5,21 @@
 
     <properties>
         <project.version>0.1.0-SNAPSHOT</project.version>
-        <isis-version>2.0.0-M6</isis-version>
+        <causeway.version>2.0.0-SNAPSHOT</causeway.version>
         <stanford-corenlp.version>4.4.0</stanford-corenlp.version>
         <lombok.version>1.18.20</lombok.version>
+        <jmock.version>2.12.0</jmock.version>
         <file.encoding>UTF-8</file.encoding>
     </properties>
 
     <parent>
-        <groupId>org.apache.isis.app</groupId>
-        <artifactId>isis-app-starter-parent</artifactId>
-        <version>2.0.0-M6</version>
+        <groupId>org.apache.causeway.app</groupId>
+        <artifactId>causeway-app-starter-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
-    <groupId>org.apache.isis.domox</groupId>
+    <groupId>org.apache.causeway.domox</groupId>
     <artifactId>domox</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
@@ -52,18 +53,18 @@
 
             <!-- this project's own modules -->
             <dependency>
-                <groupId>org.apache.isis.domox</groupId>
+                <groupId>org.apache.causeway.domox</groupId>
                 <artifactId>domox-domain</artifactId>
             </dependency>
             <dependency>
-                <groupId>org.apache.isis.domox</groupId>
+                <groupId>org.apache.causeway.domox</groupId>
                 <artifactId>domox-domain</artifactId>
                 <version>${project.version}</version>
                 <scope>test</scope>
                 <type>test-jar</type>
             </dependency>
             <dependency>
-                <groupId>org.apache.isis.domox</groupId>
+                <groupId>org.apache.causeway.domox</groupId>
                 <artifactId>domox-webapp</artifactId>
                 <version>${project.version}</version>
             </dependency>
