switched from M6 to M9/Causeway

--- a/domox-webapp/src/main/resources/application.yml
+++ b/domox-webapp/src/main/resources/application.yml
@@ -55,7 +55,7 @@ isis:
       credit:
         - url:  http://isis.apache.org
           image: images/apache-isis/logo-48x48.png
-          name: Apache Isis
+          name: Apache Causeway
 
       themes:
         show-chooser: false
