--- a/domox-webapp/pom.xml
+++ b/domox-webapp/pom.xml
@@ -159,18 +159,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.causeway.core</groupId>
-            <artifactId>causeway-core-internaltestvintage</artifactId>
-            <version>${causeway.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <!--dependency>
-            <groupId>org.apache.causeway.mavendeps</groupId>
-            <artifactId>causeway-mavendeps-integtests</artifactId>
-            <type>pom</type>
-            <scope>test</scope>
-        </dependency-->
-        <dependency>
             <groupId>com.tngtech.archunit</groupId>
             <artifactId>archunit-junit5-api</artifactId>
             <version>${archunit.version}</version>
@@ -241,6 +229,16 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.causeway.viewer</groupId>
+            <artifactId>causeway-viewer-restfulobjects-jaxrsresteasy4</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.causeway.viewer</groupId>
+            <artifactId>causeway-viewer-wicket-viewer</artifactId>
+            <version>2.0.0-RC3</version>
+        </dependency>
+        <!--dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
@@ -250,7 +248,7 @@
                     <artifactId>checker-qual</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency-->
 
     </dependencies>
 
