test for uml generation

--- a/domox-domain/pom.xml
+++ b/domox-domain/pom.xml
@@ -115,6 +115,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+        </dependency>
 
         <!-- IDE support (optional) -->
         <dependency>
