--- a/domox-domain/pom.xml
+++ b/domox-domain/pom.xml
@@ -53,6 +53,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>domox-service</artifactId>
             <version>${project.version}</version>
