--- a/docker/sparknlp/Dockerfile
+++ b/docker/sparknlp/Dockerfile
@@ -1,36 +1,21 @@
+# Download base image (Ubuntu 18.04)
 FROM ubuntu:18.04
-RUN apt-get update && apt-get -y update
 
-RUN apt-get -y update \
-    && apt-get install -y wget \
-    && apt-get install -y jq \
-    && apt-get install -y lsb-release \
-    && apt-get install -y openjdk-8-jdk-headless \
-    && apt-get install -y build-essential python3-pip \
-    && pip3 -q install pip --upgrade \
-    && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
-            /usr/share/man /usr/share/doc /usr/share/doc-base
+# Install required dependencies
+RUN apt-get update && apt-get install -y \
+    python3 \
+    python3-pip \
+    openjdk-8-jdk
 
-ENV PYSPARK_DRIVER_PYTHON=python3
+# Install Spark NLP and PySpark
+RUN pip3 install spark-nlp==3.0.3 pyspark==3.1.2
+
+# Set environment variables
 ENV PYSPARK_PYTHON=python3
+ENV PYSPARK_DRIVER_PYTHON=python3
 
-ENV LC_ALL=C.UTF-8
-ENV LANG=C.UTF-8
+# Set the entrypoint command
+CMD ["pyspark"]
 
-# We expose the FastAPI default port 8515
-EXPOSE 8515
-
-# Install all Python required libraries
-COPY requirements.txt /
-RUN pip install -r /requirements.txt
-
-# Adds the entrypoint to the FastAPI server
-COPY entrypoint.sh /
-RUN chmod +x /entrypoint.sh
-
-# In /content folder we will have our main.py and the license files
-COPY ./content/ /content/
-WORKDIR content/
-
-# We tell Docker to run this file when a container is instantiated
-ENTRYPOINT ["/entrypoint.sh"]
+# docker build --progress tty -t sparknlp .
+# docker run sparknlp
