--- a/domox-service/pom.xml
+++ b/domox-service/pom.xml
@@ -9,6 +9,10 @@
         <project.version>0.1.0-SNAPSHOT</project.version>
         <kotlin.version>1.6.0</kotlin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <fuel.version>2.3.1</fuel.version>
+        <tika.version>2.9.1</tika.version>
+        <okhttp.version>4.12.0</okhttp.version>
     </properties>
 
     <parent>
@@ -52,6 +56,7 @@
             </exclusions>
         </dependency>
 
+        <!-- to be removed, once SparkNLP works -->
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
@@ -67,14 +72,17 @@
             <artifactId>stanford-corenlp</artifactId>
             <classifier>models</classifier>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!-- HTTP Invocation -->
         <dependency>
             <groupId>com.github.kittinunf.fuel</groupId>
             <artifactId>fuel</artifactId>
-            <version>2.3.1</version>
+            <version>${fuel.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>kotlin-stdlib</artifactId>
@@ -85,7 +93,7 @@
         <dependency>
             <groupId>com.github.kittinunf.fuel</groupId>
             <artifactId>fuel-json</artifactId>
-            <version>2.3.1</version>
+            <version>${fuel.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>kotlin-stdlib</artifactId>
@@ -93,6 +101,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${okhttp.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.mashape.unirest</groupId>
             <artifactId>unirest-java</artifactId>
@@ -107,12 +121,12 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>2.1.0</version>
+            <version>${tika.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-parsers</artifactId>
-            <version>2.1.0</version>
+            <version>${tika.version}</version>
             <type>pom</type>
         </dependency>
         <dependency>
@@ -120,6 +134,7 @@
             <artifactId>rulebook-core</artifactId>
             <version>0.12</version>
         </dependency>
+        <!-- Consider using drools, it's more current and recommended by you.com / baeldung -->
         <dependency>
             <groupId>com.deliveredtechnologies</groupId>
             <artifactId>rulebook-spring</artifactId>
@@ -155,7 +170,7 @@
                 <executions>
                     <execution>
                         <id>compile</id>
-                        <phase>compile</phase>
+                        <phase>process-sources</phase>
                         <goals>
                             <goal>compile</goal>
                         </goals>
